tests/bad/method_ampersand_without_this.oc
/// fail: Expected 'this' over here

struct Foo {}

// This isn't allowed.
def Foo::foo(&x: i32) {}